kustomize/transmission/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transmission
  labels:
    goldilocks.fairwinds.com/enabled: "true"
