kustomize/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  ports:
    - port: 9091
      targetPort: 9091
      protocol: TCP
  selector:
    app: transmission
