kustomize/transmission/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-tailscale
spec:
  defaultBackend:
    service:
      name: transmission
      port:
        name: tailscale
  ingressClassName: tailscale-disabled
  tls:
  - hosts:
    - transmission
